--- a/Experiment_Website/home/home.html
+++ b/Experiment_Website/home/home.html
@@ -6,15 +6,15 @@
     </head>
     <body>
         <div class="navigation_block">
-            <div class="abt_btn">About</div><div class="ctc_btn">Contact</div>
+            <a class="home_btn" href="home.html">Home</a><div class="abt_btn">About</div><div class="ctc_btn">Contact</div>
         </div>
         <div class="main_block">
             <div class="description">Experiment on 
                 Audio Memorability
             </div>
-            <div class="start_btn" href="#start">
+            <a class="start_btn" href="../experiment/experiment.html">
                 START
-            </div>
+            </a>
         </div>
     </body>
 </html>
