--- a/Experiment_Website/index.html
+++ b/Experiment_Website/index.html
@@ -6,13 +6,13 @@
     </head>
     <body>
         <div class="navigation_block">
-            <a class="home_btn" href="home.html">Home</a><div class="abt_btn">About</div><div class="ctc_btn">Contact</div>
+            <a class="home_btn" href="index.html">Home</a><div class="abt_btn">About</div><div class="ctc_btn">Contact</div>
         </div>
         <div class="main_block">
             <div class="description">Experiment on 
                 Audio Memorability
             </div>
-            <a class="start_btn" href="../experiment/experiment.html">
+            <a class="start_btn" href="../experiment.html">
                 START
             </a>
         </div>
