complete overall experiment structure (with break timer)

--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -16,6 +16,7 @@
               <div class="now-playing">PLAYING x OF y</div>
               <div class="track-art"></div>
               <div class="track-name">Track Name</div>
+              <p class="timer_prompt"></p>
               <div class="response_btns">
                 <!-- <input type="submit" class="hrd_btn" onclick="heard()" name="Heard" value="Heard" /> -->
                 <div class="unhrd_btn" onclick="unheard()">Not heard</div>
