--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -1,60 +1,108 @@
 <!DOCTYPE html>
 <html>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <head>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <!-- Load FontAwesome icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link rel="stylesheet" href="experiment.css">
         <title> Experiment on Audio Memorability</title>
     </head>
     <body>
-        <div class="navigation_block">
-            <a class="home_btn" href="../index.html">Home</a><a class="abt_btn">About</a><a class="ctc_btn">Contact</a>
-        </div>
-        <div class="player">
-            <div class="details">
-              <div class="now-playing">PLAYING x OF y</div>
-              <div class="track-art"></div>
-              <div class="track-name">Track Name</div>
-              <p class="timer_prompt"></p>
-              <!-- ref: https://stackoverflow.com/questions/44483070/how-to-program-a-yes-no-answer-as-buttons-in-an-html-form-without-using-radio-b -->
-              <div class="response_btns">
-                <input id="toggle-alhrd" name="toggle" type="radio">
-                <label for="toggle-alhrd" title="Heard this song before experiment">Heard Before</label>
-                <input id="toggle-unhrd" name="toggle" type="radio" checked="checked">
-                <label for="toggle-unhrd" title="First time hearing this song">First Time</label>
-                <input id="toggle-hrd" name="toggle" type="radio">
-                <label for="toggle-hrd" title="Second time the song played in the experiment">Surely Repeat</label>
-              </div>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                          <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                          <a class="nav-link" href="#scroll-target">Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="player">
+                <div class="details">
+                    <div class="now-playing row">PLAYING x OF y</div>
+                    <div class="track-art row"></div>
+                    <div class="track-name row">Track Name</div>
+                    <!-- ref: https://stackoverflow.com/questions/44483070/how-to-program-a-yes-no-answer-as-buttons-in-an-html-form-without-using-radio-b -->
+                    <div class="response_btns">
+                        <input id="toggle-alhrd" name="toggle" type="radio">
+                        <label for="toggle-alhrd" title="Heard this song before experiment">Heard Before</label>
+                        <input id="toggle-unhrd" name="toggle" type="radio" checked="checked">
+                        <label for="toggle-unhrd" title="First time hearing this song">First Time</label>
+                        <input id="toggle-hrd" name="toggle" type="radio">
+                        <label for="toggle-hrd" title="Second time the song played in the experiment">Surely Repeat</label>
+                    </div>
+                </div>
+                <div class="buttons">
+                    <div class="prev-track" onclick="prevTrack()"><i class="fa fa-step-backward fa-2x"></i></div>
+                    <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-5x"></i></div>
+                    <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div>
+                </div>
+                <div class="slider_container">
+                    <div class="current-time">00:00</div>
+                    <input type="range" min="1" max="100" value="0" class="seek_slider" disabled>
+                    <div class="total-duration">00:00</div>
+                </div>
+                <div class="slider_container">
+                    <i class="fa fa-volume-down"></i>
+                    <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
+                    <i class="fa fa-volume-up"></i>
+                </div>
             </div>
-            <div class="buttons">
-              <div class="prev-track" onclick="prevTrack()"><i class="fa fa-step-backward fa-2x"></i></div>
-              <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-5x"></i></div>
-              <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div>
-            </div>
-            <div class="slider_container">
-              <div class="current-time">00:00</div>
-              <input type="range" min="1" max="100" value="0" class="seek_slider" disabled>
-              <div class="total-duration">00:00</div>
-            </div>
-            <div class="slider_container">
-              <i class="fa fa-volume-down"></i>
-              <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
-              <i class="fa fa-volume-up"></i>
-            </div>
-        </div>
-            <!-- ref: https://www.w3schools.com/howto/howto_css_login_form.asp        -->
-            <div id="id01" class="modal">
-              <div class="modal-content animate">
-                  <div class="container">
-                      <label for="uname"><b>Log In By Email</b></label>
-                      <input type="text" placeholder="Enter Your Email" name="email" id="userEmail" required>
-                      <button type="submit" onclick="submitEmail()">START</button>        
+            
+            <!-- Modal -->
+            <div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalLabel" aria-hidden="true"> 
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="submitModalLabel">Fill in your email first</h5>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="form-group">
+                          <!-- <label for="message-text" class="col-form-label">Email: </label> -->
+                          <input class="col-12" type="text" placeholder="Enter Your Email" name="email" id="userEmail" required>
+                          <!-- <textarea class="form-control" id="message-text"></textarea> -->
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button class="btn btn-danger" type="submit" onclick="submitEmail()">START</button>        
+                    </div>
                   </div>
-              </div>
-          </div>
+                </div>
+            </div>            
 
-        
+        </main>
+        <footer id=scroll-target>
+            <div class="container">
+                <!--Grid row-->
+                <div class="row py-4">
+                  <!--Grid column-->
+                  <div class="col-md-12 text-center">
+                    <i class="material-icons" style="font-size:36px">email</i>
+                    <p>liyangtseng.ee06@nycu.edu.tw</p>
+                  </div>
+                  <!--Grid column-->
+                </div>
+                <!--Grid row-->
+              </div>
+        </footer>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" 
+            integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" 
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" 
+            integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" 
+            crossorigin="anonymous"></script>
         <!-- Load the main script for the player -->
         <script src="experiment.js"></script>
     </body>
