--- a/Experiment_Website/index.html
+++ b/Experiment_Website/index.html
@@ -2,21 +2,57 @@
 <html>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <head>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="home.css">
         <title> Experiment on Audio Memorability</title>
     </head>
     <body>
-        <div class="navigation_block">
-            <a class="home_btn" href="index.html">Home</a><div class="abt_btn">About</div><div class="ctc_btn">Contact</div>
-        </div>
-        <div class="main_block">    
-            <div class="description">Experiment on 
-                Audio Memorability
-            </div>
-            <!-- for local testing-->
-            <a href="experiment.html" class="start_btn">start</a>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                          <a class="nav-link" href="#scroll-target">Contact</a>
+                        </div>
+                      </div>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="main_block position-relative overflow-hidden p-3 p-md-5 text-center ">
+                <div class="col-md-6 p-lg-5 mx-auto my-5">
+                  <h1 class="title display-1 font-weight-normal">Experiment on <br> Audio Memorability</h1>
+                  <a class="btn btn-dark btn-lg mt-5" href="experiment.html">START</a>
+                </div>
+            </div>            
+        </main>
+        <footer id=scroll-target>
+            <div class="container">
+                <!--Grid row-->
+                <div class="row py-4">
+                  <!--Grid column-->
+                  <div class="col-md-12 text-center">
+                    <i class="material-icons" style="font-size:36px">email</i>
+
+                    <p>liyangtseng.ee06@nycu.edu.tw</p>
+                  </div>
+                  <!--Grid column-->
+                </div>
+                <!--Grid row-->
+              </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" 
+            integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" 
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" 
+            integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" 
+            crossorigin="anonymous"></script>
     
-        </div>
     </body>
 </html>
 
