--- a/Experiment_Website/index.html
+++ b/Experiment_Website/index.html
@@ -25,8 +25,8 @@
         </header>
         <main>
             <div class="main_block position-relative overflow-hidden p-3 p-md-5 text-center ">
-                <div class="col-md-6 p-lg-5 mx-auto my-5">
-                  <h1 class="title display-1 font-weight-normal">Experiment on <br> Audio Memorability</h1>
+                <div class=" col-12 col-lg-8 p-lg-4 mx-auto my-3">
+                  <h1 class="title display-2 font-weight-normal">Experiment on Audio Memorability</h1>
                   <a class="btn btn-dark btn-lg mt-5" href="experiment.html">START</a>
                 </div>
             </div>            
