minor update on alert when experiment finished

--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -35,7 +35,7 @@
           
           <div class="player">
               <div class="details">
-                  <div class="now-playing row">PLAYING x OF y</div>
+                  <div class="now-playing row">162 segments to play</div>
                   <div class="track-art row"></div>
                   <div class="track-name row"></div>
                   <!-- ref: https://stackoverflow.com/questions/44483070/how-to-program-a-yes-no-answer-as-buttons-in-an-html-form-without-using-radio-b -->
