--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -47,14 +47,9 @@
                       <input id="toggle-hrd" name="toggle" type="radio">
                       <label for="toggle-hrd" title="Second time the song played in the experiment">Surely Repeat</label>
                   </div>
-                  <div class="text-center">
-                    <button class="btn-lg btn-danger" id="submitBtn" type="submit">Submit</button>        
-                  </div>
               </div>
               <div class="buttons">
-                  <!-- <div class="prev-track" onclick="prevTrack()"><i class="fa fa-step-backward fa-2x"></i></div> -->
                   <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-4x"></i></div>
-                  <!-- <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div> -->
               </div>
               <div class="slider_container">
                   <div class="current-time">00:00</div>
@@ -63,7 +58,7 @@
               </div>
               <div class="slider_container">
                   <i class="fa fa-volume-down"></i>
-                  <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
+                  <input type="range" min="1" max="100" value="80" class="volume_slider" onchange="setVolume()">
                   <i class="fa fa-volume-up"></i>
               </div>
           </div>
@@ -78,7 +73,7 @@
                   <div class="modal-body">
                     <p>Rules:
                       <br>
-                      1. Your participation will only counts if you finish the whole experiment.
+                      1. Your participation will only counts if you finish the whole experiment in time.
                       <br>
                       2. You should only paritcipate in this experiment once, we will use email as identification.
                     </p>
