add startTime to db

--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -52,7 +52,7 @@
               </div>
               <div class="buttons">
                   <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-4x"></i></div>
-                  <!-- <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div> -->
+                  <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div>
               </div>
               <div class="slider_container">
                   <div class="current-time">00:00</div>
