--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -48,11 +48,12 @@
                       <label for="toggle-unhrd" data-bs-toggle="tooltip" data-bs-placement="top" title="第一次聽到 / First time hearing">2. First Time</label>
                       <input id="toggle-hrd" name="toggle" type="radio">
                       <label for="toggle-hrd" data-bs-toggle="tooltip" data-bs-placement="top" title="實驗中重複 / Second time played in the experiment">3. Surely Repeat</label>
-                  </div>
+                      <button class="skip_btn" data-bs-toggle="tooltip" data-bs-placement="top" title="Skip if loading failed" onclick="skip()">SKIP</button>        
+                    </div>
               </div>
               <div class="buttons">
                   <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-4x"></i></div>
-                  <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div>
+                  <!-- <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div> -->
               </div>
               <div class="slider_container">
                   <div class="current-time">00:00</div>
@@ -81,7 +82,7 @@
                       2. 每位受試者只能參加一次實驗，請用報名實驗時填寫的電子郵件信箱作為登錄識別，實驗結束後我們會再依據此信箱與您連論酬勞付款方式
                     </p>
                     <p>
-                      重要提醒: 請在每一個音樂片段播完之前在以下三個選項中擇一作為回答:
+                      重要提醒: 在54，108首片段結束後會有3分鐘的休息時間，可以在此休息、上廁所。另外請在每一個音樂片段播完之前在以下三個選項中擇一作為回答:
                       <br>
                       1. 參加實驗前就已經聽過此音樂
                       <br>
@@ -97,7 +98,7 @@
                       <br>
                       2. You should only paritcipate in this experiment once, we will use the email address you submitted as identification and contact you about payment afterward.
                     </p>
-                    <p>As a reminder, you need to choose the following three statement as your answer before every music segment ends during the experiment:
+                    <p>As a reminder, you can take a 3-minute bathroom break after clip #54 and #108; you also need to choose the following three statement as your answer before every music segment ends during the experiment:
                       <br>
                       1. You have have heard this music segment before the experiment
                       <br>
