--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <!-- Load FontAwesome icons -->
@@ -32,7 +33,7 @@
               <span class="sr-only"></span>
             </div>
           </div>
-          <p class="text-center display-6 mt-3 countDown">Maximum Time Allowed: 1:30:00, Press Play to Start</p>
+          <p class="text-center display-6 mt-3 countDown">Maximum Time Allowed: 1:15:00, Press Play to Start</p>
           <p class="text-center mt-3 note">There should be enough time even with lagging</p>
           
           <div class="player">
@@ -53,7 +54,7 @@
               </div>
               <div class="buttons">
                   <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-4x"></i></div>
-                  <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div>
+                  <!-- <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div> -->
               </div>
               <div class="slider_container">
                   <div class="current-time">00:00</div>
