update website from beta to formal

--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -86,11 +86,13 @@
                     <h5 class="modal-title" id="submitModalLabel">Welcome to the Music Memorability Experiment</h5>
                   </div>
                   <div class="modal-body">
-                    <p>規則:
+                    <p>規則與說明:
                       <br>
-                      1. 受試者必須不間斷、專注地全程地參與實驗，在短時間內重複的片段有夠高的正確率才能獲取酬勞，
+                      1. 建議抉擇時請不要想太多，憑直覺回答即可(在歌曲播放完之前應可以作答)，如此才可以在時間內完成。
                       <br>
-                      2. 每位受試者只能參加一次實驗，請用報名實驗時填寫的電子郵件信箱作為登錄識別，實驗結束若有夠高的正確率可以憑結束時的亂碼(token)與報名信箱與我們聯絡酬勞付款方式
+                      2. 受試者必須不間斷、專注地全程地參與實驗，在短時間內重複的片段有夠高的正確率才能獲取酬勞，
+                      <br>
+                      3. 每位受試者只能參加一次實驗，請用報名實驗時填寫的電子郵件信箱作為登錄識別，實驗結束若有夠高的正確率可以憑結束時的亂碼(token)與報名信箱與我們聯絡酬勞付款方式
                     </p>
                     <p>
                       重要提醒: 在135，270首片段結束後會有3分鐘的休息時間，可以在此休息、上廁所。另外請在每一個音樂片段播完之前在以下三個選項中擇一作為回答:
@@ -103,11 +105,13 @@
                       <br><br>  
                       如果實驗前已聽過，且同時實驗中又重複播放此片段，請選擇選項三
                     </p>
-                    <p>Rules:
+                    <p>Rules and Notification:
                       <br>
-                      1. Your participation will only counts if you finish the whole experiment in time and pass the vigilance threshold.
+                      1. It is recommand to answer your option intuively before the music segment ends, so that you could finish the experiment on time.
                       <br>
-                      2. You should only paritcipate in this experiment once, you should use the token generated after passsing experiment and the email address you submitted as identification to contact us about payment afterward.
+                      2. Your participation will only counts if you finish the whole experiment in time and pass the vigilance threshold.
+                      <br>
+                      3. You should only paritcipate in this experiment once, you should use the token generated after passsing experiment and the email address you submitted as identification to contact us about payment afterward.
                     </p>
                     <p>As a reminder, you can take a 3-minute bathroom break after clip #135 and #270; you also need to choose the following three statement as your answer before every music segment ends during the experiment:
                       <br>
