minor update on webiste

--- a/Experiment_Website/experiment.html
+++ b/Experiment_Website/experiment.html
@@ -29,11 +29,11 @@
         <main>
           <div class="alert alert-success collapse" role="alert", id="passExperimentAlert">
             <Strong> Congradulation! </Strong> You passed the experiment, please copy and save this <a href="#" class="alert-link" onclick="copyToClipboard()">Token</a> to contact us.
-            <br><Strong> 恭喜! </Strong> 您已通過實驗，請按下並複製<a href="#" class="alert-link" onclick="copyToClipboard()">Token</a>以在聯絡我們時作為實驗完成的依據
+            <br><Strong> 恭喜! </Strong> 您已通過實驗，請按下並複製<a href="#" class="alert-link" onclick="copyToClipboard()">Token</a>並貼上並回覆"【互動式音樂記憶點實驗】報名成功"這封email上，以告知我們您以完成實驗。
           </div>
 
           <div class="alert alert-danger collapse" role="alert", id="failedExperimentAlert">
-            <strong>Too Bad! 您未通過實驗</strong> The experiment is over and you failed the experiment. 
+            <strong>Too Bad! </strong> The experiment is over and you failed the experiment. 
             <br><strong>很抱歉! </strong> 您未通過實驗
             <div id="failed_explain"></div>
           </div>
@@ -43,7 +43,7 @@
               <span class="sr-only"></span>
             </div>
           </div>
-          <p class="text-center display-6 mt-3 countDown">Maximum Time Allowed: 1:15:00, Press Play to Start</p>
+          <p class="text-center display-6 mt-3 countDown">Maximum Time Allowed: 1:20:00, Press Play to Start</p>
           <p class="text-center mt-3 note">There should be enough time even with lagging</p>
           
           <div class="player">
